--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Richard Eriksson is a Swedish designer and developer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Richard Eriksson</title>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans|Lora:400,400italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans%7CLora:400,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
@@ -15,7 +15,7 @@
 	<header>
 		<div class="container">
 			<div class="intro">
-				<h1>Hi, I'm Richard Eriksson a Swedish<br>designer and developer<br>who cares about creating great experiences</h1>
+				<h1>Hi, I'm Richard Eriksson, a Swedish<br>designer and developer,<br>who care about creating great experiences</h1>
 				<p><a href="mailto:richarderiksson90@gmail.com">Get in touch</a> or look at some of my work below</p>
 			</div>
 		</div>
@@ -29,13 +29,13 @@
 				</div>
 				<div class="description">
 					<p>
-						TjustFastigheter AB develops and streamlines local supply for the municipal activities. 
+						TjustFastigheter AB owns and develops the real estate used for activities carried out by the municipality of Västervik. 
 						I created the design based on their visual identity and input. 
 						I was also responsible for the front-end and back-end development tailored to EPiServer CMS. 
 					</p>
 				</div>	
 			<div class="image">
-				<img src="img/TjustFastigheter.jpg" alt="Tjust fastigheter">
+				<img src="img/tjust-fastigheter.jpg" alt="TjustFastigheter AB">
 			</div>
 		</div>
 	</section>
@@ -48,12 +48,12 @@
 		    </div>
 			<div class="description">
 				<p>
-					TRIS is a structure for rehabilitation collaboration in Södermanland County, Sweden. 
-					I stood for the creation of the design based on their visual identity and input. I was also involved in the front-end and back-end development tailored to EPiServer CMS. 
+					TRIS is a structure for rehabilitation collaboration in Södermanland County. 
+					I was responsible for the creation of the design based on their visual identity and input. I was also involved in the front-end and back-end development tailored to EPiServer CMS. 
 				</p>
 			</div>	
 			<div class="image">
-				<img src="img/TRIS.jpg" alt="TRIS">
+				<img src="img/tris.jpg" alt="TRIS">
 			</div>
 		</div>
 	</section>
@@ -66,14 +66,13 @@
 		    </div>
 			<div class="description">
 				<p>
-					BrickPile is an Open Source CMS that is driven by my friend Marcus Lindblom. 
-					I was asked to be involved when an update of the appearance would be made. 
-					I created a new logo and a concept for the new interface.  
+					BrickPile is an open source CMS that is created by a friend of mine, Marcus Lindblom. 
+					In the latest update of the appearance I was responsible for creating a concept for the new interface and a new logo.  
 					The work is still in progress but if you are curious on BrickPile, checkout the  <a href="http://getbrickpile.com/">current version</a>. 
 				</p>
 			</div>	
 			<div class="image">
-				<img src="img/Brickpile.jpg" alt="Brickpile">
+				<img src="img/brickpile.jpg" alt="Brickpil CMSe">
 			</div>
 		</div>
 	</section>
